--- a/utilities/verticalAlign.html
+++ b/utilities/verticalAlign.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Vertical Alignment</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Vertical Alignment</h1><small>檔名：<code>verticalAlign.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Vertical Alignment</h1><small > 檔名：<code>verticalAlign.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>使用 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/vertical-align">vertical-alignment</a> 通用類別改變元素的對齊</h2>
-<h6>請注意，垂直對齊僅影響 inline、inline-block、inline-table、和 table 元素</h6>
+<h2> 使用 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/vertical-align">vertical-alignment</a> 通用類別改變元素的對齊 </h2>
+<h6> 請注意，垂直對齊僅影響 inline、inline-block、inline-table、和 table 元素 </h6>
 
-<h4>搭配 inline 元素：</h4>
+<h4> 搭配 inline 元素：</h4>
 
-<p>註：inline 中不太建議調整 align-*，這會受到字體不同影響其結果。</p>
+<p> 註：inline 中不太建議調整 align-*，這會受到字體不同影響其結果。</p>
 
 <div class="demo">
     <span class="align-baseline">baseline</span>
@@ -18,20 +18,20 @@
     <span class="align-text-bottom">text-bottom</span>
 </div>
 
-<h4>搭配 table cell 元素：</h4>
+<h4> 搭配 table cell 元素：</h4>
 
-<p>註：這是實戰常用技巧，尤其是 align-middle</p>
-
+<p> 註：這是實戰常用技巧，尤其是 align-middle</p>
+<!-- align 可以放在表格內或是表格行 -->
 <div class="demo">
-    <table style="height: 100px;" class="align-middle">
+    <table style="height: 100px;" class="table align-bottom">
         <tbody>
           <tr>
-            <td class="align-baseline">baseline</td>
-            <td class="align-top">top</td>
-            <td class="align-middle">middle</td>
-            <td class="align-bottom">bottom</td>
-            <td class="align-text-top">text-top</td>
-            <td class="align-text-bottom">text-bottom</td>
+            <td class="baseline">baseline</td>
+            <td class="top">top</td>
+            <td class="middle">middle</td>
+            <td class="bottom">bottom</td>
+            <td class="text-top">text-top</td>
+            <td class="text-bottom">text-bottom</td>
           </tr>
         </tbody>
     </table>
@@ -196,7 +196,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -209,7 +209,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -237,7 +237,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
