--- a/utilities/clearfix.html
+++ b/utilities/clearfix.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Clearfix</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Clearfix</h1><small>檔名：<code>clearfix.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Clearfix</h1><small > 檔名：<code>clearfix.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 
-<h2>清除浮動</h2>
-<h6>透過將 <code>.clearfix</code> <b>添加到父元素之中</b> 可以輕鬆的清除 <code>float</code> 所造成的副作用。</h6>
+<h2> 清除浮動 </h2>
+<h6> 透過將 <code>.clearfix</code> <b > 添加到父元素之中 </b> 可以輕鬆的清除 <code>float</code> 所造成的副作用。</h6>
 
 <div class="demo">
-  <div class="bg-info 練習">
+  <div class="bg-info clearfix">
     <button type="button" class="btn btn-secondary float-start">Example Button floated left</button>
     <button type="button" class="btn btn-secondary float-end">Example Button floated right</button>
+    <!-- 在不使用 clearfix 的時候，該位置可能會置入一個 div 並且將 css clear:both -->
+    <!-- 但這樣設計不直覺，也會多一個空的 di，故使用 clearfix 會在目前位置加入偽元素::afeter 並使用 clear:both -->
   </div>
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
@@ -172,7 +174,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -185,7 +187,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -213,7 +215,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
