--- a/utilities/coloredLinks.html
+++ b/utilities/coloredLinks.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Colored links</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Colored links</h1><small>檔名：<code>coloredLinks.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Colored links</h1><small > 檔名：<code>coloredLinks.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>連結顏色</h2>
-<h6>你可以使用 <code>.link-*</code> 類別為連結著色。不同於 <a href="https://bootstrap5.hexschool.com/docs/5.0/utilities/colors/#colors">.text-* 類別</a>， 這些類別具有 <code>:hover</code> 和 <code>:focus</code> 狀態</h6>
+<h2> 連結顏色 </h2>
+<h6> 你可以使用 <code>.link-*</code> 類別為連結著色。不同於 <a href="https://bootstrap5.hexschool.com/docs/5.0/utilities/colors/#colors">.text-* 類別 </a>， 這些類別具有 <code>:hover</code> 和 <code>:focus</code> 狀態 </h6>
 
-<p>將以下顏色替換為 .link-{情境色彩}</p>
+<p> 將以下顏色替換為 .link-{情境色彩}</p>
 
 <div class="demo">
-  <a href="#" class="text-primary">Primary link</a>
-  <a href="#" class="text-secondary">Secondary link</a>
-  <a href="#" class="text-success">Success link</a>
-  <a href="#" class="text-danger">Danger link</a>
-  <a href="#" class="text-warning">Warning link</a>
-  <a href="#" class="text-info">Info link</a>
-  <a href="#" class="text-light">Light link</a>
-  <a href="#" class="text-dark">Dark link</a>
+  <a href="#" class="link-primary">Primary link</a>
+  <a href="#" class="link-secondary">Secondary link</a>
+  <a href="#" class="link-success">Success link</a>
+  <a href="#" class="link-danger">Danger link</a>
+  <a href="#" class="link-warning">Warning link</a>
+  <a href="#" class="link-info">Info link</a>
+  <a href="#" class="link-light">Light link</a>
+  <a href="#" class="link-dark">Dark link</a>
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -177,7 +177,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -190,7 +190,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -218,7 +218,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
