--- a/utilities/ratio.html
+++ b/utilities/ratio.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Ratio</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Ratio</h1><small>檔名：<code>ratio.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Ratio</h1><small > 檔名：<code>ratio.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Example</h2>
-<h6>將所有嵌入如 <code>&lt;iframe&gt;</code> 包在帶有 <code>.ratio</code> 和長寬比 class 的父元素中。我們的通用選擇器 <code>.ratio > *</code>
-  會自動調整直接子元素的大小</h6>
+<h6> 將所有嵌入如 <code>&lt;iframe&gt;</code> 包在帶有 <code>.ratio</code> 和長寬比 class 的父元素中。我們的通用選擇器 <code>.ratio > *</code>
+  會自動調整直接子元素的大小 </h6>
 
-<p>加入 ratio-{ 16x9, 1x1, 4x3, 21x9 } 調整以下比例</p>
+<p> 加入 ratio-{ 16x9, 1x1, 4x3, 21x9 } 調整以下比例 </p>
 
 <div class="demo">
-  <div class="ratio 練習">
+  <div class="ratio ratio-4x3">
     <iframe src="https://www.youtube.com/embed/gCd8Kg7avc0" title="YouTube video" allowfullscreen></iframe>
   </div>
 </div>
 
 <h2>Custom ratios</h2>
-<h6>例如，要創建 2x1 的長寬比，請在 <code>.ratio</code> 上設置 <code>--bs-aspect-ratio: 50%</code></h6>
+<h6> 例如，要創建 2x1 的長寬比，請在 <code>.ratio</code> 上設置 <code>--bs-aspect-ratio: 50%</code></h6>
 
 <ul>
-  <li>必要設定寬</li>
-  <li>數值為寬的 %。</li>
+  <li> 必要設定寬 </li>
+  <li> 數值為寬的 %。</li>
 </ul>
 
 <div class="demo">
-  <div class="ratio" style="display: inline-block; width: 10rem; background-color: #f8f9fa; border: 1px solid #dee2e6;">
+  <!-- 寬度的一半為高度，使用此時由寬度決定高度 -->
+  <div class="ratio" style="--bs-aspect-ratio: 50%; display: inline-block; width: 10rem; background-color: #f8f9fa; border: 1px solid #dee2e6;">
     <div style="display: flex; justify-content: center; align-items: center;">2x1</div>
   </div>
 </div>
@@ -187,7 +188,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -200,7 +201,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -228,7 +229,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
