--- a/forms/overview.html
+++ b/forms/overview.html
@@ -21,14 +21,21 @@
       <label for="exampleInputEmail1" class="練習">Email address</label>
       <input type="email" class="練習" id="exampleInputEmail1" aria-describedby="emailHelp">
       <div id="emailHelp" class="練習">We'll never share your email with anyone else.</div>
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
     <div class="mb-3">
       <label for="exampleInputPassword1" class="練習">Password</label>
       <input type="password" class="練習" id="exampleInputPassword1">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1">
     </div>
     <div class="mb-3">
       <label for="exampleInputTel" class="練習">Tel</label>
       <input type="練習" class="練習" id="exampleInputTel">
+      <label for="exampleInputTel" class="form-label">Tel</label>
+      <input type="tel" class="form-control" id="exampleInputTel">
     </div>
     <div class="mb-3 form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -36,6 +43,8 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
     <button class="btn btn-primary">Button Type 的影響</button>
+    <!-- 如果不加上 button 會被當作 submit -->
+    <button type="button" class="btn btn-primary">Button Type 的影響 </button>
   </form>
 </div>
 
@@ -46,7 +55,7 @@
 <div class="demo">
   <label for="inputPassword5" class="form-label">Password</label>
   <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-  <div id="passwordHelpBlock" class="練習">
+  <div id="passwordHelpBlock" class="form-text">
   Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
   </div>
 </div>
@@ -54,6 +63,7 @@
 <h4>可以使用任何典型的行內 HTML 元素實現行內文字</h4>
 
 <div class="demo">
+  <!-- 利用交錯軸對齊。可以排列 form-text -->
   <div class="row g-3 align-items-center">
     <div class="col-auto">
       <label for="inputPassword6" class="col-form-label">Password</label>
@@ -62,7 +72,7 @@
       <input type="password" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline">
     </div>
     <div class="col-auto">
-      <span id="passwordHelpInline" class="練習">
+      <span id="passwordHelpInline" class="form-text">
         Must be 8-20 characters long.
       </span>
     </div>
@@ -76,10 +86,14 @@
 <div class="demo">
   <form>
     <fieldset 練習>
+    <!-- 全部禁用 -->
+    <fieldset disabled>
       <legend>Disabled fieldset example</legend>
       <div class="mb-3">
         <label for="disabledTextInput" class="form-label">Disabled input</label>
         <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+        <!-- 單獨加上可以部份禁用 -->
+        <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input" disabled>
       </div>
       <div class="mb-3">
         <label for="disabledSelect" class="form-label">Disabled select menu</label>
