--- a/forms/formControls.html
+++ b/forms/formControls.html
@@ -1,58 +1,59 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>表單控制</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 表單控制 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">表單控制</h1><small>檔名：<code>formControls.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 表單控制 </h1><small > 檔名：<code>formControls.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>範例</h2>
+<h2> 範例 </h2>
 
-<p>為表單加上 .form-control</p>
+<p> 為表單加上 .form-control</p>
 
 <div class="demo">
   <div class="mb-3">
     <label for="exampleFormControlInput1" class="form-label">Email address</label>
-    <input type="email" class="練習" id="exampleFormControlInput1" placeholder="name@example.com">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
     </div>
     <div class="mb-3">
     <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-    <textarea class="練習" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
 </div>
 
-<h2>尺寸</h2>
+<h2> 尺寸 </h2>
 
-<p>為表單加上 .form-control-{ sm, lg} 等不同尺寸</p>
+<p> 為表單加上 .form-control-{ sm, lg} 等不同尺寸 </p>
 
 <div class="demo">
-  <input class="form-control 練習 mb-2" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
+  <input class="form-control form-control-lg mb-2" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
   <input class="form-control mb-2" type="text" placeholder="Default input" aria-label="default input example">
-  <input class="form-control 練習" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
+  <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example">
 </div>
 
-<h2>禁用</h2>
+<h2> 禁用 </h2>
 
-<p>為表單加上 disabled 屬性</p>
+<p> 為表單加上 disabled 屬性 </p>
 
 <div class="demo">
-  <input class="form-control mb-2" type="text" placeholder="Disabled input" value="Disabled input" aria-label="Disabled input example" 練習>
-  <input class="form-control" type="text" placeholder="Disabled readonly input" value="Disabled readonly input" aria-label="Disabled input example" 練習 readonly>
+  <input class="form-control mb-2" type="text" placeholder="Disabled input" value="Disabled input" aria-label="Disabled input example" disabled>
+  <!-- 如果只有 readonly 點擊後會幫你家外框，disabled 不會有 -->
+  <input class="form-control" type="text" placeholder="Disabled readonly input" value="Disabled readonly input" aria-label="Disabled input example"  readonly>
 </div>
 
-<h2>僅能閱讀</h2>
+<h2> 僅能閱讀 </h2>
 
-<p>為表單加上 readonly 屬性</p>
+<p> 為表單加上 readonly 屬性 </p>
 
 <div class="demo">
-  <input class="form-control" type="text" value="Readonly input here..." placeholder="Readonly input here..." aria-label="readonly input example" 練習>
+  <input class="form-control" type="text" value="Readonly input here..." placeholder="Readonly input here..." aria-label="readonly input example" readonly>
 </div>
 
-<h2>僅能閱讀的文本</h2>
+<h2> 僅能閱讀的文本 </h2>
 
-<p>為 input 套用 readonly 及加上 .form-control-plaintext 樣式</p>
+<p> 為 input 套用 readonly 及加上 .form-control-plaintext 樣式 </p>
 
 <div class="demo">
   <div class="mb-3 row">
     <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
     <div class="col-sm-10">
-      <input type="text" readonly class="練習" id="staticEmail" value="email@example.com">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
     </div>
   </div>
   <div class="mb-3 row">
@@ -67,7 +68,7 @@
   <form class="row g-3">
     <div class="col-auto">
       <label for="staticEmail2" class="visually-hidden">Email</label>
-      <input type="text" readonly class="練習" id="staticEmail2" value="email@example.com">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="email@example.com">
     </div>
     <div class="col-auto">
       <label for="inputPassword2" class="visually-hidden">Password</label>
@@ -79,7 +80,7 @@
   </form>
 </div>
 
-<h2>檔案 input</h2>
+<h2> 檔案 input</h2>
 
 <div class="demo">
   <div class="mb-3">
@@ -104,34 +105,34 @@
   </div>
 </div>
 
-<h2>顏色</h2>
+<h2> 顏色 </h2>
 
-<p>為 input 加上 .form-control-color 樣式</p>
+<p> 為 input 加上 .form-control-color 樣式 </p>
 
 <div class="demo">
   <label for="exampleColorInput" class="form-label">Color picker</label>
-  <input type="color" class="form-control 練習" id="exampleColorInput" value="#00aaff" title="Choose your color">
+  <input type="color" class="form-control form-control-color " id="exampleColorInput" value="#00aaff" title="Choose your color">
 </div>
 
-<h2>資料清單</h2>
+<h2> 資料清單 </h2>
 
-<p>資料清單允許你創造一組可以在 input 內部被存取 (並自動補齊) 的 <code>&lt;option&gt;</code>。它們跟 <code>&lt;select&gt;</code> 元素很相似，但是在樣式設定上具有更多限制與差異。雖然大部分的瀏覽器和作業系統都包含一些對於 <code>&lt;datalist&gt;</code> 元素的支持，但他們的樣式充其量是不一致的。</p>
+<p> 資料清單允許你創造一組可以在 input 內部被存取 (並自動補齊) 的 <code>&lt;option&gt;</code>。它們跟 <code>&lt;select&gt;</code> 元素很相似，但是在樣式設定上具有更多限制與差異。雖然大部分的瀏覽器和作業系統都包含一些對於 <code>&lt;datalist&gt;</code> 元素的支持，但他們的樣式充其量是不一致的。</p>
 
 <ol>
-  <li>建立 datalist 結構（包含 datalist 及 option 元素）</li>
-  <li>datalist 補上 id，並與 input list 屬性進行對應</li>
+  <li> 建立 datalist 結構（包含 datalist 及 option 元素）</li>
+  <li>datalist 補上 id，並與 input list 屬性進行對應 </li>
 </ol>
 
 <div class="demo">
   <label for="exampleDataList" class="form-label">Datalist example</label>
   <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-  <!-- <datalist id="datalistOptions">
+  <datalist id="datalistOptions">
     <option value="San Francisco">
     <option value="New York">
     <option value="Seattle">
     <option value="Los Angeles">
     <option value="Chicago">
-  </datalist> -->
+  </datalist>
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -216,7 +217,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -229,7 +230,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -257,7 +258,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
