--- a/forms/select.html
+++ b/forms/select.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>選擇功能表</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 選擇功能表 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">選擇功能表</h1><small>檔名：<code>select.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 選擇功能表 </h1><small > 檔名：<code>select.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>預設</h2>
+<h2> 預設 </h2>
 
-<p>為元素補上 .form-select</p>
+<p> 為元素補上 .form-select</p>
 
 <div class="demo">
-  <select class="練習" aria-label="Default select example">
+  <select class="form-select" aria-label="Default select example">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
     <option value="2">Two</option>
@@ -15,19 +15,19 @@
   </select>
 </div>
 
-<h2>尺寸</h2>
+<h2> 尺寸 </h2>
 
-<p>為元素加上 .form-select-{ sm, lg } 調整尺寸</p>
+<p> 為元素加上 .form-select-{ sm, lg } 調整尺寸 </p>
 
 <div class="demo">
-  <select class="form-select 練習 mb-3" aria-label=".form-select-lg example">
+  <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
     <option value="2">Two</option>
     <option value="3">Three</option>
   </select>
     
-  <select class="form-select 練習" aria-label=".form-select-sm example">
+  <select class="form-select form-select-sm" aria-label=".form-select-sm example">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
     <option value="2">Two</option>
@@ -35,12 +35,12 @@
   </select>
 </div>
 
-<h4>同時支持 <code>multiple</code> 屬性</h4>
+<h4> 同時支持 <code>multiple</code> 屬性 </h4>
 
-<p>為元素加上 multiple 使其可以多選</p>
+<p> 為元素加上 multiple 使其可以多選 </p>
 
 <div class="demo">
-  <select class="form-select" 練習 aria-label="multiple select example">
+  <select id="multiselect"class="form-select" multiple aria-label="multiple select example">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
     <option value="2">Two</option>
@@ -48,10 +48,11 @@
   </select>
 </div>
 
-<p>為元素加上 size 限制顯示尺寸</p>
+<p> 為元素加上 size 限制顯示尺寸 </p>
 
 <div class="demo">
-  <select class="form-select" 練習 aria-label="size 3 select example">
+  <!-- size = 數字 可以讓你在 select 選單限制數量 (數字) -->
+  <select class="form-select" size="2" aria-label="size 3 select example">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
     <option value="2">Two</option>
@@ -59,12 +60,12 @@
   </select>
 </div>
 
-<h2>禁用</h2>
+<h2> 禁用 </h2>
 
-<p>為元素加上 disabled 使其無法運作</p>
+<p> 為元素加上 disabled 使其無法運作 </p>
 
 <div class="demo">
-  <select class="form-select" aria-label="Disabled select example" 練習>
+  <select class="form-select" aria-label="Disabled select example" disabled>
     <option selected>Open this select menu</option>
     <option value="1">One</option>
     <option value="2">Two</option>
@@ -154,7 +155,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -167,7 +168,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -195,7 +196,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
