--- a/forms/range.html
+++ b/forms/range.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>範圍</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 範圍 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">範圍</h1><small>檔名：<code>range.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 範圍 </h1><small > 檔名：<code>range.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>概觀</h2>
+<h2> 概觀 </h2>
 
-<p>將以下的 input type 改為 range</p>
+<p> 將以下的 input type 改為 range</p>
 
 <div class="demo">
-  <input type="text">
+  <input type="range">
 </div>
 
-<p>為以下元素加上 .form-range</p>
+<p> 為以下元素加上 .form-range</p>
 
 <div class="demo">
   <label for="customRange1" class="form-label">Example range</label>
-  <input type="range" class="練習" id="customRange1">
+  <input type="range" class="form-range" id="customRange1" min="100" max="1000" step="50">
 </div>
 
 <div class="demo">
@@ -29,29 +29,29 @@
   })
 </script>
 
-<h2>禁用</h2>
+<h2> 禁用 </h2>
 
-<p>為以下元素加上 disabled</p>
+<p> 為以下元素加上 disabled</p>
 
 <div class="demo">
   <label for="disabledRange" class="form-label">Disabled range</label>
-  <input type="range" class="form-range" id="disabledRange" 練習> 
+  <input type="range" class="form-range" id="disabledRange" disabled> 
 </div>
 
-<h2>最小與最大</h2>
-<h6>有隱含值 <code>min</code> 和 <code>max, 0</code> 和 <code>100</code> 的區別，可以為 <code>min</code> 和 <code>max</code> 屬性賦予新的值</h6>
+<h2> 最小與最大 </h2>
+<h6> 有隱含值 <code>min</code> 和 <code>max, 0</code> 和 <code>100</code> 的區別，可以為 <code>min</code> 和 <code>max</code> 屬性賦予新的值 </h6>
 
-<p>為以下元素加上 min 及 max 屬性</p>
+<p> 為以下元素加上 min 及 max 屬性 </p>
 
 <div class="demo">
   <label for="customRange2" class="form-label">Example range</label>
   <input type="range" class="form-range" 練習 id="customRange2">
 </div>
 
-<h2>間距數值 (steps)</h2>
-<h6>預設的情況，範圍輸入會 “讀取” 整數值。可以使用 step 值來改變</h6>
+<h2> 間距數值 (steps)</h2>
+<h6> 預設的情況，範圍輸入會 “讀取” 整數值。可以使用 step 值來改變 </h6>
 
-<p>為以下元素加上 step 屬性</p>
+<p> 為以下元素加上 step 屬性 </p>
 
 <div class="demo">
   <label for="customRange3" class="form-label">Example range</label>
@@ -140,7 +140,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -153,7 +153,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -181,7 +181,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
